# Next

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  Makefile  Next.vcxproj  Next.vcxproj.filters  README.md  builtins.cpp  builtins.h  bytecode.cpp  bytecode.h  codegen.cpp  codegen.h  core.cpp  core.h  core_source.h  display.cpp  display.h  engine.cpp  engine.h  expr.cpp  expr.h  exprtypes.h  fn.cpp  fn.h  fntest.n  format.cpp  format.h  format_templates.h  func_utils.h  gc.cpp  gc.h  grammar  hashmap.h  import.cpp  import.h  keywords.h  loader.cpp  loader.h  (+48 more)
benchmark/: binary_trees.n  fibonacci.n
docs/: array.md  betterengine.md  boundmethods.md  calls.md  classes.md  composite_operations.md  constructors.md  dynamicimports.md  exceptions.md  exceptions2.md  fibers.md  frames.md  imports.md  inheritance.md  iterators.md  jit.md  loadandstore.md  member_as_method.md  metaclasses.md  methodbuffer.md  module_level_variables.md  primitives.md  register.md  static_members.md  static_members2.md  todo.md  toplevelexpressions.md  type.md  varargs.md
filesystem/: path.h  resolver.h
objects/: array.cpp  array.h  array_iterator.cpp  array_iterator.h  bits.cpp  bits.h  bits_iterator.cpp  bits_iterator.h  boolean.cpp  boolean.h  boundmethod.cpp  boundmethod.h  buffer.h  builtin_module.cpp  builtin_module.h  bytecode.cpp  bytecode.h  bytecodecompilationctx.cpp  bytecodecompilationctx.h  class.cpp  class.h  classcompilationctx.cpp  classcompilationctx.h  classes.cpp  classes.h  common.h  core.cpp  core.h  customarray.h  customdeque.h  error_types.h  errors.cpp  errors.h  fiber.cpp  fiber.h  fiber_iterator.cpp  fiber_iterator.h  file.cpp  file.h  formatspec.cpp  (+34 more)
tests/: arraytest.n  benchmark_orchestrator.n  benchmark_orchestrator_gc.n  bitstest.n  boundmethods.n  breaktest.n  builtin.n  cascadingexceptions.n  classtest.n  core.n  deopt.n  exceptiontest.n  fibers.n  fibonacci.n  filetest.n  fncall.n  formattest.n  fortest.n  garbagetest.n  gctest.n  globalwhile.n  hashmap.n  helloworld.n  iftest.n  importest.n  inheritance.n  inputtest.n  is_int.n  iterator.n  jittest.n  mathtest.n  opmethod.n  orchestrator.n  prepost.n  primitivetest.n  printest.n  randtest.n  rangetest.n  repeated_import.n  rerrtest.n  (+13 more)
(+54 files in other folders)
